# app/Models/Booking.php
@@ -8,7 +8,7 @@ use Illuminate\Database\Eloquent\SoftDeletes;
 
 class Booking extends Model
 {
-    use HasFactory;
+    use HasFactory, SoftDeletes;
     protected $table = 'bookings';
     public $fillable = [
         'user_id',
@@ -16,6 +16,9 @@ class Booking extends Model
         'check_in_date',
         'check_out_date',
         'create_by',
+        'update_by',
+        'delete_at',
+        'delete_by',
     ];
     public function user(){
         return $this->belongsTo(User::class);
@@ -32,6 +35,5 @@ class Booking extends Model
     public function getAllBooking(){
         $bookings = Booking::with('user', 'room') -> get();
         return $bookings;
-    }
-    
+    } 
 }
