# routes/api.php
@@ -18,4 +18,7 @@ use Illuminate\Support\Facades\Route;
 // Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 //     return $request->user();
 // });
-Route::resource('bookings', BookingController::class);
+
+Route::apiResource('bookings', BookingController::class);
+Route::patch('bookings/{id}/restore', [BookingController::class, 'restore']);
+
